--- a/house/index.html
+++ b/house/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>House and trees</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
+<body> 
+   
+       <div class="tree">
+            <div class="tree_one"></div>
+            <div class="tree_two"></div>
+            <div class="tree_three"></div>
+       </div>
+    
+       <div class="house"></div>
+
+</body>
+  
+</html>
