--- a/slider/index.html
+++ b/slider/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <title>Slider CSS</title>
+    <link href="style.css" rel="stylesheet">
+</head>
 
+<body>
+  
+    <div id="blackLayer"></div>
+    <div id="container">
+        <div id="mainbox">
+            <div id="imgbox">
+                <img src="1.jpg">
+                <img src="2.jpg">
+                <img src="3.jpeg">
+            </div>
+        </div>
+    </div>
+
+</body>
+
+</html>
