--- a/parallax_effect/index.html
+++ b/parallax_effect/index.html
@@ -1,1 +1,10 @@
-...
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <title>Parallax Effect</title>
+</head>
+<body>
+
+</body>
+</html>
