--- a/parallax_effect/index.html
+++ b/parallax_effect/index.html
@@ -6,5 +6,17 @@
 </head>
 <body>
 
+    <div id="boxOne">
+        <h1>PARALLAX EFFECT</h1>
+    </div>
+
+    <div id="boxTwo">
+        <h1>PARALLAX EFFECT</h1>
+    </div>
+
+    <div id="boxThree">
+        <h1>PARALLAX EFFECT</h1>
+    </div>
+    
 </body>
 </html>
