--- a/animation/index.html
+++ b/animation/index.html
@@ -1,1 +1,33 @@
-In progress...
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <title>Animation</title>
+    <link rel="stylesheet" href="style.css"/>
+    <script src="jquery-3.3.1.min.js"></script>
+</head>
+<body>
+
+    <div id="main">
+        <div id="objectOne">
+            <img src="butelka.png">
+        </div>
+        <div id="objectTwo">
+            <img src="butelka.png">
+        </div>
+        <div id="objectThree">
+            <img src="butelka.png">
+        </div>
+
+        <div id="layer">
+            <div id="text">
+                KRÓLEWSKIE
+                <div id="full">
+                JASNE PEŁNE
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
+</html>
