--- a/menu/index.html
+++ b/menu/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li>About</li>
         <li>Service</li>
-        <li><img src="logo.jpg"></li>
+        <li><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKIYZQyXoBPKJcHDH_ORw-TshJc4kJQCF139xKqNAxJVH6OBXN"></li>
         <li>Portfolio</li>
         <li>Contact</li>
         <div id="line"></div>
