--- a/index.html
+++ b/index.html
@@ -194,6 +194,24 @@
             </div>
         </div>
     </div>
+    <div class="single-card">
+        <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="img/ball.jpg">
+            </div>
+            <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Ball<i class="material-icons right">more_vert</i></span>
+                <div class="button-card">
+                    <p><a href="house/index.html">LIVE DEMO</a></p>
+                    <p><a href="https://github.com/mickozak/CSS/tree/master/house">GITHUB</a></p>
+                </div>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Ball<i class="material-icons right">close</i></span>
+                <p>The ball jumps when you click the button. Used: HTML, CSS, JavaScript, SASS.</p>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 
