--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
             <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Ball<i class="material-icons right">more_vert</i></span>
                 <div class="button-card">
-                    <p><a href="house/index.html">LIVE DEMO</a></p>
-                    <p><a href="https://github.com/mickozak/CSS/tree/master/house">GITHUB</a></p>
+                    <p><a href="ball/index.html">LIVE DEMO</a></p>
+                    <p><a href="https://github.com/mickozak/CSS/tree/master/ball">GITHUB</a></p>
                 </div>
             </div>
             <div class="card-reveal">
