--- a/index.html
+++ b/index.html
@@ -212,6 +212,24 @@
             </div>
         </div>
     </div>
+    <div class="single-card">
+        <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="img/preloader.jpg">
+            </div>
+            <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Preloader<i class="material-icons right">more_vert</i></span>
+                <div class="button-card">
+                    <p><a href="preloader/index.html">LIVE DEMO</a></p>
+                    <p><a href="https://github.com/mickozak/CSS/tree/master/ball">GITHUB</a></p>
+                </div>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Preloader<i class="material-icons right">close</i></span>
+                <p>The element is visible on the screen until the entire page is read.</p>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 
