--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <span class="card-title activator grey-text text-darken-4">Preloader<i class="material-icons right">more_vert</i></span>
                 <div class="button-card">
                     <p><a href="preloader/index.html">LIVE DEMO</a></p>
-                    <p><a href="https://github.com/mickozak/CSS/tree/master/ball">GITHUB</a></p>
+                    <p><a href="The element is visible on the screen until the entire page is read.">GITHUB</a></p>
                 </div>
             </div>
             <div class="card-reveal">
