--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="content">
 <div class="title-text">
     <h1>CSS EFFECT</h1>
-    <p class="flow-text">The repository contains various mini projects made in HTML, CSS and JavaScript. <br/>Tested by Firefox and Chrome.</p>
+    <p class="flow-text">The repository contains various mini projects made in HTML, CSS and JavaScript. <br/>Tested by Firefox and Chrome (desktop).</p>
 </div>
 <div class="container-card">
     <div class="single-card">
